fixed centered alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -74,7 +74,7 @@ a {
 }
 
 p {
-  text-align: center;
+  text-align: left;
 }
 
 
